<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2017 Confluent Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.confluent</groupId>
    <artifactId>kafka-connect-storage-cloud</artifactId>
    <packaging>pom</packaging>
    <version>3.2.1-SNAPSHOT</version>
    <name>kafka-connect-storage-cloud</name>
    <organization>
        <name>Confluent, Inc.</name>
        <url>http://confluent.io</url>
    </organization>
    <url>http://confluent.io</url>
    <description>
        Kafka Connect suite of connectors for copying data between Kafka and cloud storage types.
    </description>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/confluentinc/kafka-connect-storage-cloud.git</connection>
        <developerConnection>scm:git:git@github.com:confluentinc/kafka-connect-storage-cloud.git</developerConnection>
        <url>https://github.com/confluentinc/kafka-connect-storage-cloud</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>kafka-connect-s3</module>
    </modules>

    <properties>
        <confluent.version>3.2.1-SNAPSHOT</confluent.version>
        <kafka.version>0.10.2.1-SNAPSHOT</kafka.version>
        <jackson.version>2.8.5</jackson.version>
        <junit.version>4.12</junit.version>
        <easymock.version>3.4</easymock.version>
        <powermock.version>1.6.6</powermock.version>
        <confluent.maven.repo>http://packages.confluent.io/maven/</confluent.maven.repo>
        <licenses.version>3.2.1-SNAPSHOT</licenses.version>
        <maven-assembly.version>2.6</maven-assembly.version>
    </properties>

    <repositories>
        <repository>
            <id>confluent</id>
            <name>Confluent</name>
            <url>${confluent.maven.repo}</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-api</artifactId>
            <version>${kafka.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-json</artifactId>
            <version>${kafka.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-storage-common</artifactId>
            <version>${confluent.version}</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-storage-core</artifactId>
            <version>${confluent.version}</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-storage-format</artifactId>
            <version>${confluent.version}</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-storage-hive</artifactId>
            <version>${confluent.version}</version>
        </dependency>
        <dependency>
            <groupId>io.confluent</groupId>
            <artifactId>kafka-connect-storage-partitioner</artifactId>
            <version>${confluent.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>${easymock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-easymock</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <version>2.5.1</version>
                  <configuration>
                      <source>1.7</source>
                      <target>1.7</target>
                      <compilerArguments>
                          <Xlint:all/>
                          <!-- bootstrap class path not set in conjunction with -source 1.7 -->
                          <Xlint:-options/>
                          <!-- serializable class ... has no definition of serialVersionUID -->
                          <Xlint:-serial/>
                          <!-- bad path element ".../repository/org/apache/derby/derby/10.10.2.0/derbyLocale_*.jar": no such file or directory -->
                          <Xlint:-path/>
                          <!--
                          WALFile.java:[333,16] [deprecation] sync() in Syncable has been deprecated
                          Apparently SuppressWarnings("deprecation") doesn't cover this on JDK 7
                          -->
                          <Xlint:-deprecation/>
                          <!-- Needed for DataWriter.java because @SuppressWarnings("unchecked") doesn't cover this on JDK 7 -->
                          <Xlint:-unchecked/>
                          <Werror/>
                      </compilerArguments>
                      <showWarnings>true</showWarnings>
                      <showDeprecation>false</showDeprecation>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-surefire-plugin</artifactId>
                  <version>2.18.1</version>
                  <configuration>
                      <argLine>-Djava.awt.headless=true -XX:MaxPermSize=512m</argLine>
                      <reuseForks>false</reuseForks>
                      <forkCount>1</forkCount>
                  </configuration>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-checkstyle-plugin</artifactId>
                  <version>2.17</version>
                  <executions>
                      <execution>
                          <id>validate</id>
                          <phase>validate</phase>
                          <configuration>
                              <configLocation>checkstyle/checkstyle.xml</configLocation>
                              <encoding>UTF-8</encoding>
                              <consoleOutput>true</consoleOutput>
                              <failsOnError>true</failsOnError>
                              <includeResources>false</includeResources>
                              <includeTestResources>false</includeTestResources>
                          </configuration>
                          <goals>
                              <goal>check</goal>
                          </goals>
                      </execution>
                  </executions>
              </plugin>
              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-assembly-plugin</artifactId>
                  <version>${maven-assembly.version}</version>
              </plugin>
          </plugins>
        </pluginManagement>
    </build>
</project>
